--- a/index.css
+++ b/index.css
@@ -6,11 +6,11 @@ body, html {
 
   .container {
     background-color: rgb(255, 224, 219);
-    height: calc(100vh - 50px); /* Занимает всю высоту экрана */
+    height: calc(100vh - 50px); 
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 170px;
+    padding-top: 100px;
     box-sizing: border-box;
 }
 
@@ -31,7 +31,7 @@ body, html {
   .form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 30px;
     width: 300px; 
   }
 
