--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 body, html {
     margin: 0;
     padding: 0;
-    overflow: hidden;
     height: 100%;
+    width: 100%;
+    background-color: #FFE4E4;
+    overflow: hidden;
 }
 
 @font-face {
