--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -33,7 +33,7 @@
 }
 
 .sidebar {
-    position: fixed; 
+    position: fixed;
     left: 0;
     top: 100px;
     width: 250px;
@@ -41,21 +41,22 @@
     z-index: 100;
     display: flex;
     flex-direction: column;
-    gap: 4px; 
-    padding: 8px; 
+    gap: 10px;
+    padding: 10px;
     margin: 0;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 .sidebar h3 {
-    margin: 16px 0 4px 0; 
-    padding: 4px 8px; 
+    margin: 0 0 10px 0;
+    padding: 10px 0;
     color: rgba(255, 111, 0, 0.47);
-    font-size: 20px; 
+    font-size: 20px;
     font-family: 'Roboto', sans-serif;
     border-radius: 6px;
     line-height: 1.2;
     width: 100%;
+    justify-content: flex-start;
 }
 
 .sidebar label {
@@ -78,7 +79,7 @@
     border-radius: 4px;
     cursor: pointer;
     position: relative;
-    flex-shrink: 0; /* Чтобы не сжимался */
+    flex-shrink: 0;
 }
   
 .sidebar input[type="checkbox"]:checked::before {
