--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -15,6 +15,7 @@
     width: 100%;
     height: 100px;
     position: fixed; 
+    z-index: 1000;
 }
 
 .site-title {
@@ -33,7 +34,7 @@
 }
 
 .sidebar {
-    position: fixed;
+    position: absolute; 
     left: 0;
     top: 100px;
     width: 250px;
