--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,6 @@
 .project-card {
     display: flex;
-    background: white;
+    background: #fff;
     width: 1000px;
     min-height: 350px;
     height: auto;
