--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -15,13 +15,13 @@
     width: 100%;
     height: 100px;
     position: fixed; 
-    z-index: 1000;
+    z-index: 1;
 }
 
 .site-title {
     margin: 0;
     font-size: 60px;
-    color: white;
+    color: #fff;
     font-family: 'Italiana', serif;
     margin-left: 30px;
 }
@@ -39,7 +39,6 @@
     top: 100px;
     width: 250px;
     height: calc(100% - 80px);
-    z-index: 100;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -75,7 +74,7 @@
     width: 25px;
     height: 25px;
     margin-right: 15px;
-    background: white;
+    background: #fff;
     border: 2px solid #ffa95d;
     border-radius: 4px;
     cursor: pointer;
@@ -95,7 +94,7 @@
 
 
 .sidebar label span {
-    background: white; 
+    background: #fff; 
     padding: 8px 12px;
     border-radius: 6px;
     color: rgba(255, 111, 0, 0.47); 
@@ -136,7 +135,7 @@
 
 .sidebar .course-group input[type="checkbox"]:checked + .filter-text {
     background-color: #ffa95d;
-    color: white;
+    color: #fff;
 }
 
 .edit-icon {
