--- a/src/Card.css
+++ b/src/Card.css
@@ -86,3 +86,26 @@
 .trash-can-icon:hover {
     transform: scale(1.05);
 }
+
+.metric {
+    position: absolute;
+    bottom: 20px;
+    right: 30px;
+    width: 150px;
+    height: 50px;
+    background-color: #ffa95d;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    border: 0;
+    border-radius: 10px;
+}
+
+.metric_text {
+    position: absolute;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    bottom: 0;
+    right: 60px;
+    color: #615F5F;
+}
