--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -139,6 +139,25 @@
     color: #fff;
 }
 
+.sidebar .apply-filters-button {
+    position: absolute;
+    background-color: #ffa95d;
+    left: 12px;
+    top: 720px;
+    width: 230px;
+    height: 50px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    border: 0;
+    border-radius: 10px;
+    color: white;
+}
+
+.sidebar .apply-filters-button:hover {
+    background-color: #bf3c02;
+    cursor: pointer;
+}
+
 .edit-icon {
     position: fixed;
     transform-origin: right bottom; 
