--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,14 @@ body, html {
 
 @font-face {
     font-family: 'Italiana';
-    src: url('src/assets/Italiana-Regular.ttf') format('truetype');
+    src: url('/assets/Italiana-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('src/assets/Roboto-Regular.ttf') format('truetype');
+    src: url('/assets/Roboto-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
