--- a/src/Card.css
+++ b/src/Card.css
@@ -78,8 +78,8 @@
     position: absolute;
     bottom: 20px;
     right: 30px;
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
 }
 
@@ -105,8 +105,8 @@
     position: absolute;
     font-family: 'Roboto', sans-serif;
     font-size: 24px;
-    bottom: 0;
-    right: 60px;
+    bottom: 20px;
+    right: 30px;
     color: #615F5F;
 }
 
