--- a/src/PersonalPage.css
+++ b/src/PersonalPage.css
@@ -26,24 +26,41 @@
 
 .user-name,
 .user-telegram {
-    font-size: 36px;
     font-family: 'Roboto', sans-serif;
     color: #615F5F;
-    margin-top: 0;
+    margin: 0;
     width: 100%;
     text-align: center;
 }
 
+.user-name {
+    margin-bottom: 10px;
+    font-size: 44px;
+}
+
+.user-telegram {
+    font-size: 36px;
+}
+
 .projects-container {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: flex-start;
     margin-top: 100px;
-    margin-left: 70px;
 }
 
 .my-projects {
     font-size: 48px;
+    font-family: 'Roboto', sans-serif;
+    color: #615F5F;
+    width: 100%;
+    text-align: center;
+}
+
+.empty-projects-message {
+    font-size: 28px;
     font-family: 'Roboto', sans-serif;
     color: #615F5F;
     width: 100%;
